# SzamitogepesGrafika

./: .gitignore  0001-0250.mkv  Jumper-transparent.psd  Jumper.psd  README.md
BlenderBLOSMData/3d_tiles/google/: UlRPVEYuYnVsa21ldGFkYXRhLnBsYW5ldG9pZD1lYXJ0aCxidWxrX21ldGFkYXRhX2Vwb2NoPTk2MyxwYXRoPTMwNjA1MDQxNjA1MixjYWNoZV92ZXJzaW9uPTY.json  UlRPVEYuYnVsa21ldGFkYXRhLnBsYW5ldG9pZD1lYXJ0aCxidWxrX21ldGFkYXRhX2Vwb2NoPTk2MyxwYXRoPTMwNjA1MDQxNjA1MjYxNTcsY2FjaGVfdmVyc2lvbj02.json  UlRPVEYuYnVsa21ldGFkYXRhLnBsYW5ldG9pZD1lYXJ0aCxidWxrX21ldGFkYXRhX2Vwb2NoPTk2MyxwYXRoPTMwNjA1MDQxNjA1MjcwNjQsY2FjaGVfdmVyc2lvbj02.json  UlRPVEYuYnVsa21ldGFkYXRhLnBsYW5ldG9pZD1lYXJ0aCxidWxrX21ldGFkYXRhX2Vwb2NoPTk2MyxwYXRoPTMwNjA1MDQxNjA1MjcwNjUsY2FjaGVfdmVyc2lvbj02.json  UlRPVEYuYnVsa21ldGFkYXRhLnBsYW5ldG9pZD1lYXJ0aCxidWxrX21ldGFkYXRhX2Vwb2NoPTk2MyxwYXRoPTMwNjA1MDQxNjA1MjcwNjcsY2FjaGVfdmVyc2lvbj02.json  UlRPVEYuYnVsa21ldGFkYXRhLnBsYW5ldG9pZD1lYXJ0aCxidWxrX21ldGFkYXRhX2Vwb2NoPTk2MyxwYXRoPTMwNjA1MDQxNjA1MjcwNzYsY2FjaGVfdmVyc2lvbj02.json  UlRPVEYuYnVsa21ldGFkYXRhLnBsYW5ldG9pZD1lYXJ0aCxidWxrX21ldGFkYXRhX2Vwb2NoPTk2MyxwYXRoPTMwNjA1MDQxNjA1MjcwNzcsY2FjaGVfdmVyc2lvbj02.json  (+31 more)
BlenderBLOSMData/osm/: map.osm  map_extra.osm
christmastree/: CMakeLists.txt  main.cpp
lab1/: CMakeLists.txt  Pontok.cpp
lab2/: CMakeLists.txt  Negyzetek.cpp  Pontok.cpp
lab4/: Vetites.cpp
lab4_01/: Vetites.cpp
lab4_02/: CMakeLists.txt  Vetites.cpp
lab5/: CMakeLists.txt  Inverzkinematika.cpp  glut.h
lab7/: CMakeLists.txt  Karakter.cpp
lab7_2(lab6)/: CMakeLists.txt  Tesselation.cpp
lab9/: CMakeLists.txt  main.cpp
